--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -23,6 +23,57 @@ p  {
     line-height: 1.5; 
 }
 
+a {
+    color: $primary-color;
+    text-decoration: none;
+    font-size: 1.15rem;
+}
+
+.title {
+    margin-bottom: 0;
+}
+
+.subtitle {
+    margin-top: 5px;
+    font-weight: normal;
+}
+
+.quote {
+    font-size: 1.25rem;
+    font-style: italic;
+}
+
+.card {
+    text-align: center;
+    background-color: #fff;
+    border-radius: 2px; 
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+}
+
+.card-body {
+    padding: 15px;
+
+    h3 {
+        font-size: 1.2rem;
+        margin: 0;
+        font-weight: normal;
+    }
+
+    p {
+        font-size: 1rem;
+    }
+}
+
+.card-image {
+    width: 100%;
+    margin-bottom: 10px;
+}
+
+.card:hover {
+    box-shadow: 0 7px 14px rgba(0,0,0,0.25), 0 5px 5px rgba(0,0,0,0.22);
+}
+
 .icon {
     width: 40px;
     height: 40px;
