--- a/src/scss/_utility.scss
+++ b/src/scss/_utility.scss
@@ -2,21 +2,74 @@
     Clases CSS para aplicar estilos rápidamente
 */
 
+// Margins
+
 .m-0 { margin: 0; }
+.m-1 { margin: 1em; }
+.m-2 { margin: 2em; }
+.m-3 { margin: 3em; }
 .ml-1 { margin-left: 1em; }
 .ml-2 { margin-left: 2em; }
 .ml-3 { margin-left: 3em; }
+.mr-1 { margin-right: 1em; }
+.mr-2 { margin-right: 2em; }
+.mr-3 { margin-right: 3em; }
+.mt-1 { margin-top: 1em; }
+.mt-2 { margin-top: 2em; }
+.mt-3 { margin-top: 3em; }
+.mb-1 { margin-bottom: 1em; }
+.mb-2 { margin-bottom: 2em; }
+.mb-3 { margin-bottom: 3em; }
+
+.mrl-1 { 
+    margin-right: 1em; 
+    margin-left: 1em; 
+}
+
+.mrl-2 { 
+    margin-right: 2em; 
+    margin-left: 2em; 
+}
+
+.mrl-3 { 
+    margin-right: 3em; 
+    margin-left: 3em; 
+}
+
+.mtb-1 { 
+    margin-top: 1em; 
+    margin-bottom: 1em; 
+}
+
+.mtb-2 { 
+    margin-top: 2em; 
+    margin-bottom: 2em; 
+}
+
+.mtb-3 { 
+    margin-top: 3em; 
+    margin-bottom: 3em; 
+}
+
+// Backgrounds
 
 .background-primary { background-color: $primary-color; }
 .background-secondary { background-color: $secondary-color; }
+.background-accent { background-color: $accent-color; }
+.background-white { background-color: #ffffff; }
+.background-light-grey { background-color: $grey50; }
+
+// Text
 
 .text-primary { color: $primary-color; }
 .text-secondary { color: $secondary-color; }
+.text-accent { color: $accent-color; }
+.text-white { color:  #ffffff; }
+.text-black { color: #000000; }
+.text-dark-grey { color: $grey900; }
 
 .container {
-    margin: auto;
-    margin-left: 25px;
-    margin-right: 25px; 
+    margin: auto 25px;
 }
 
 .container--full-width {
@@ -25,13 +78,36 @@
     padding-right: 25px;
 }
 
-.button {
+// Buttons
+
+.button, .button-sm, .button-lg {
     cursor: pointer;
     display: inline-block;
-    padding: 12px 16px;
     transition: all 0.25s ease;
+
+    @if $rounded == true {
+        border-radius: 5px;
+    }
 }
 
+.button { padding: 12px 16px; }
+.button-sm { padding: 9px 12px; }
+.button-lg { padding: 16px 24px; }
+
+.button-primary {
+    background-color: $primary-color;
+    color: #ffffff;
+ }
+
+.button-secondary {
+    background-color: $secondary-color;
+    color: #ffffff;
+}
+
+.button-accent {
+    background-color: $accent-color;
+    color: #ffffff;
+}
 
 @media only screen and (min-width: $laptop-l) {
     .container {
