--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -6,16 +6,21 @@
 @import 'reset';
 @import 'variables';
 @import 'utility';
+@import 'grid';
 @import 'animations';
 
 body {
-    font-size: 100%;
+    font-size: $font-size;
     font-family: $sans-serif;
     color: $text-color;
     background-color: $grey50;
 }
 
-h1 { font-size: 2rem; }
+h1 { 
+    font-size: 2rem; 
+    color: $title-color;
+}
+
 h2 { font-size: 1.5rem; }
 h3 { font-size: 1.25rem; }
 p  { 
