--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,7 +1,6 @@
 // Variables SASS para modificar rápidamente el estilo predeterminado
 
 // Colores
-
 $primary-color: #FF6F00;
 $secondary-color: #162129;
 $accent-color: #FF006F;
@@ -11,7 +10,6 @@ $title-color: $primary-color;
 $subtitle-color: $secondary-color;
 
 // Escala de grises
-
 $grey50: #fafafa;
 $grey100: #f5f5f5;
 $grey200: #eeeeee;
@@ -23,14 +21,60 @@ $grey700: #616161;
 $grey800: #424242;
 $grey900: #212121;
 
-// Fuentes
+// Rojos
+$red50: #ffebee;
+$red100: #ffcdd2;
+$red200: #ef9a9a;
+$red300: #e57373;
+$red400: #ef5350;
+$red500: #f44336;
+$red600: #e53935;
+$red700: #d32f2f;
+$red800: #c62828;
+$red900: #b71c1c;
 
+// Verdes
+$green50: #e8f5e9;
+$green100: #c8e6c9;
+$green200: #a5d6a7;
+$green300: #81c784;
+$green400: #66bb6a;
+$green500: #4caf50;
+$green600: #43a047;
+$green700: #388e3c;
+$green800: #2e7d32;
+$green900: #1b5e20;
+
+// Azules
+$blue50: #e3f2fd;
+$blue100: #bbdefb;
+$blue200: #90caf9;
+$blue300: #64b5f6;
+$blue400: #42a5f5;
+$blue500: #2196f3;
+$blue600: #1e88e5;
+$blue700: #1976d2;
+$blue800: #1565c0;
+$blue900: #0d47a1;
+
+// Naranjas
+$orange50: #fff3e0;
+$orange100: #ffe0b2;
+$orange200: #ffcc80;
+$orange300: #ffb74d;
+$orange400: #ffa726;
+$orange500: #ff9800;
+$orange600: #fb8c00;
+$orange700: #f57c00;
+$orange800: #ef6c00;
+$orange900: #e65100;
+
+// Fuentes
 $sans-serif: sans-serif;
 $serif: serif;
 $font-size: 1.15rem;
 
 // Breakpoints
-
 $mobile-s: 320px;
 $mobile-m: 375px;
 $mobile-l: 425px;
@@ -39,9 +83,7 @@ $laptop: 1024px;
 $laptop-l: 1440px;
 
 // Navbar
-
 $nav-height: 75px;
 
 // Flags
-
 $rounded: true; // Activa el redondeado en algunos elementos
